<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout style="@style/style_top_tap" >

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:scaleType="centerInside"
            android:src="@drawable/btn_back_selector" />

        <TextView
            style="@style/text_big_white"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/opinion_feedback" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dip" />

    <EditText
        android:id="@+id/feedback_editv"
        android:layout_width="fill_parent"
        android:layout_height="200dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:gravity="left"
        android:hint="@string/write_your_opinions" />

    <Button
        android:id="@+id/feedback_commit_btn"
        android:layout_width="fill_parent"
        android:layout_height="35dip"
        android:layout_gravity="center"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/bg_btn_green_selector"
        android:gravity="center"
        android:text="@string/commit"
        android:textColor="@color/white"
        android:textSize="20dp" />

</LinearLayout>