<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout style="@style/style_top_tap" >

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:scaleType="centerInside"
            android:src="@drawable/btn_back_selector" />

        <TextView
            style="@style/style_toptap_text"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/personal_card" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:background="#a0f1f1f1" >

        <ImageView
            android:id="@+id/card_headportrait"
            android:layout_width="70px"
            android:layout_height="70px"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:scaleType="centerInside"
            android:src="@drawable/default_user" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:layout_toRightOf="@id/card_headportrait"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/card_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/card_seximgv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:scaleType="centerInside"
                android:src="@drawable/img_man" />
        </LinearLayout>

        <Button
            android:id="@+id/card_btn_addasfriend"
            android:layout_width="80dip"
            android:layout_height="35dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dip"
            android:background="@drawable/bg_btn_green_selector"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="15dip" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="3dip"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/card_location"
            style="@style/text_mid_black"
            android:layout_width="70dip"
            android:layout_height="40dip"
            android:background="#a0f1f1f1"
            android:gravity="center"
            android:text="@string/location" />

        <TextView
            android:id="@+id/m10"
            style="@style/text_mid_black"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/card_location"
            android:background="#a0f1f1f1"
            android:gravity="center"
            android:text=":" />

        <TextView
            android:id="@+id/card_location_tv"
            style="@style/text_mid_black"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dip"
            android:layout_toRightOf="@id/m10"
            android:background="#a0f1f1f1"
            android:gravity="left|center_vertical"
            android:singleLine="true"
            android:text="" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="2px"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/card_intro"
            style="@style/text_mid_black"
            android:layout_width="70dip"
            android:layout_height="80dip"
            android:background="#a0f1f1f1"
            android:gravity="center_horizontal|left"
            android:text="@string/personal_intro" />

        <TextView
            android:id="@+id/m10"
            style="@style/text_mid_black"
            android:layout_width="wrap_content"
            android:layout_height="80dip"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/card_intro"
            android:background="#a0f1f1f1"
            android:gravity="center_horizontal|left"
            android:text=":" />

        <TextView
            android:id="@+id/card_intro_tv"
            style="@style/text_mid_black"
            android:layout_width="fill_parent"
            android:layout_height="80dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dip"
            android:layout_toRightOf="@id/m10"
            android:background="#a0f1f1f1"
            android:gravity="left"
            android:singleLine="false"
            android:text="   " />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/card_btn_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="5dip" >

        <Button
            android:id="@+id/card_btn_friends"
            style="@style/text_mid_black"
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_marginRight="1dip"
            android:layout_weight="1.0"
            android:background="#a0f1f1f1"
            android:drawableLeft="@drawable/btn_friend_selector"
            android:paddingLeft="10dip"
            android:text="@string/friends" >
        </Button>

        <Button
            android:id="@+id/card_btn_msg"
            style="@style/text_mid_black"
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_marginLeft="1dip"
            android:layout_weight="1.0"
            android:background="#a0f1f1f1"
            android:drawableLeft="@drawable/btn_msg_selector"
            android:paddingLeft="10dip"
            android:text="@string/message" >
        </Button>
    </LinearLayout>

</LinearLayout>